--- a/welcome.html
+++ b/welcome.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo">FashionID</div>
+            <div><img src="image/byte.png" alt="" class="logo"></div>
             <ul class="nav-links">
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">Services</a></li>
